[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://GameOverMessage.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/background.png" type="Texture" id=3]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tablero" type="VBoxContainer" parent="."]
margin_right = 210.0
margin_bottom = 210.0

[node name="Fila0" type="HBoxContainer" parent="Tablero"]
margin_right = 210.0
margin_bottom = 67.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Casilla0" type="TextureButton" parent="Tablero/Fila0"]
margin_right = 67.0
margin_bottom = 67.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Casilla1" type="TextureButton" parent="Tablero/Fila0"]
margin_left = 71.0
margin_right = 138.0
margin_bottom = 67.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Casilla2" type="TextureButton" parent="Tablero/Fila0"]
margin_left = 142.0
margin_right = 210.0
margin_bottom = 67.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Fila1" type="HBoxContainer" parent="Tablero"]
margin_top = 71.0
margin_right = 210.0
margin_bottom = 138.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Casilla3" type="TextureButton" parent="Tablero/Fila1"]
margin_right = 67.0
margin_bottom = 67.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Casilla4" type="TextureButton" parent="Tablero/Fila1"]
margin_left = 71.0
margin_right = 138.0
margin_bottom = 67.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Casilla5" type="TextureButton" parent="Tablero/Fila1"]
margin_left = 142.0
margin_right = 210.0
margin_bottom = 67.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Fila2" type="HBoxContainer" parent="Tablero"]
margin_top = 142.0
margin_right = 210.0
margin_bottom = 210.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Casilla6" type="TextureButton" parent="Tablero/Fila2"]
margin_right = 67.0
margin_bottom = 68.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Casilla7" type="TextureButton" parent="Tablero/Fila2"]
margin_left = 71.0
margin_right = 138.0
margin_bottom = 68.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="Casilla8" type="TextureButton" parent="Tablero/Fila2"]
margin_left = 142.0
margin_right = 210.0
margin_bottom = 68.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="GameOverMessage" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_right = 48.0

[connection signal="button_up" from="Tablero/Fila0/Casilla0" to="." method="_on_Casilla0_button_up"]
[connection signal="button_up" from="Tablero/Fila0/Casilla1" to="." method="_on_Casilla1_button_up"]
[connection signal="button_up" from="Tablero/Fila0/Casilla2" to="." method="_on_Casilla2_button_up"]
[connection signal="button_up" from="Tablero/Fila1/Casilla3" to="." method="_on_Casilla3_button_up"]
[connection signal="button_up" from="Tablero/Fila1/Casilla4" to="." method="_on_Casilla4_button_up"]
[connection signal="button_up" from="Tablero/Fila1/Casilla5" to="." method="_on_Casilla5_button_up"]
[connection signal="button_up" from="Tablero/Fila2/Casilla6" to="." method="_on_Casilla6_button_up"]
[connection signal="button_up" from="Tablero/Fila2/Casilla7" to="." method="_on_Casilla7_button_up"]
[connection signal="button_up" from="Tablero/Fila2/Casilla8" to="." method="_on_Casilla8_button_up"]
[connection signal="button_up" from="GameOverMessage/Container/RestartButton" to="." method="_on_RestartButton_button_up"]

[editable path="GameOverMessage"]
